src/bindings/python/yices.py


# char *yices_type_to_string(type_t tau, uint32_t width, uint32_t height, uint32_t offset)
# NOTE: restype is c_void_p in order not to trigger the automatic cast, which loses the pointer
libyices.yices_type_to_string.restype = c_void_p
libyices.yices_type_to_string.argtypes = [type_t, c_uint32, c_uint32, c_uint32]
@catch_error(-1)
def type_to_string(tau, width, height, offset):
    cstrptr = libyices.yices_type_to_string(tau, width, height, offset)
    typestr = cast(cstrptr, c_char_p).value
    libyices.yices_free_string(cstrptr)
    return typestr

# char *yices_term_to_string(term_t t, uint32_t width, uint32_t height, uint32_t offset)
# NOTE: restype is c_void_p in order not to trigger the automatic cast, which loses the pointer
libyices.yices_term_to_string.restype = c_void_p
libyices.yices_term_to_string.argtypes = [term_t, c_uint32, c_uint32, c_uint32]
@catch_error(-1)
def term_to_string(t, width, height, offset):
    cstrptr = libyices.yices_term_to_string(t, width, height, offset)
    termstr = cast(cstrptr, c_char_p).value
    libyices.yices_free_string(cstrptr)
    return termstr


# char *yices_model_to_string(model_t *mdl, uint32_t width, uint32_t height, uint32_t offset)
# NOTE: restype is c_void_p in order not to trigger the automatic cast, which loses the pointer
libyices.yices_model_to_string.restype = c_void_p
libyices.yices_model_to_string.argtypes = [model_t, c_uint32, c_uint32, c_uint32]
@catch_error(-1)
def model_to_string(mdl, width, height, offset):
    cstrptr = libyices.yices_model_to_string(mdl, width, height, offset)
    mdlstr = cast(cstrptr, c_char_p).value
    libyices.yices_free_string(cstrptr)
    return mdlstr

# gmp support functions - note that gmp is included in the libyices.so file

def new_mpz(val=None):
    new_mpz = mpz_t()
    libyices.__gmpz_init(byref(new_mpz))
    if val:
        set_mpz(new_mpz, val)
    return new_mpz

def new_mpq(num=None, den=None):
    new_mpq = mpq_t()
    libyices.__gmpq_init(byref(new_mpq))
    if num:
        if den is None:
            raise TypeError('new_mpq: num and den must be given together')
        set_mpq(new_mpq, num, den)
    return new_mpq

def set_mpz(mpz, val):
    if isinstance(val, basestring):
        ret = libyices.__gmpz_set_str(byref(mpz), val, 0)
        if ret == -1:
            raise TypeError('set_mpz: val is an invalid integer string: '
                            'should be decimal or start with 0x (hex), 0b (binary), or 0 (octal)')
    elif isinstance(val, (int, long)):
        libyices.__gmpz_set_si(byref(mpz), val)
    else:
        raise TypeError('set_mpz: val should be a string or integer')

def set_mpq(mpq, num, den):
    if isinstance(num, basestring):
        if isinstance(den, basestring):
            ret = libyices.__gmpq_set_str(byref(mpq), num +'/'+ den, 0)
            if ret == -1:
                raise TypeError('set_mpq: num or den is an invalid integer string: '
                                'should be decimal or start with 0x (hex), 0b (binary), or 0 (octal)')
        else:
            raise TypeError('set_mpq: num and den should both be strings or integers')
    elif isinstance(num, (int, long)):
        if isinstance(den, (int, long)):
            libyices.__gmpq_set_si(byref(mpq), num, den)
        else:
            raise TypeError('set_mpq: num and den should both be strings or integers')
    else:
        raise TypeError('set_mpq: num and den should both be strings or integers')
    libyices.__gmpq_canonicalize(byref(mpq))
